make sure menu items are aligned left

--- a/src/app/components/menu/menu.component.css
+++ b/src/app/components/menu/menu.component.css
@@ -123,6 +123,7 @@
  #menu
  {
   color: #1a1a20;
+  text-align: left;
   text-shadow: 0 0 20px white;
   position: absolute;
   width: 300px;
