--- a/src/app/components/no-ceil-floor/no-ceil-floor.component.css
+++ b/src/app/components/no-ceil-floor/no-ceil-floor.component.css
@@ -3,8 +3,7 @@
     text-align: center;
     font-size: 12px;
     color: rgb(201, 201, 201);
-    padding: 40px;
-    padding-bottom: 30px;
+    padding: 10px;
     display: flex;
     flex-direction: column;
 }
